[tool.poetry]
name = "hwpwn"
version = "0.1.5"
description = "Hardware security testing tool"
authors = ["jemos <contact@jemos.net>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
typer = {version = "^0.7.0", extras = ["all"]}
PyYAML = "^6.0"
PyWavelets = "^1.4.1"
scipy = "^1.10.1"
pandas = "^2.0.0"
matplotlib = "^3.7.1"
python-dateutil = "^2.8.2"
colorama = "^0.4.6"
furo = "^2023.3.27"

[tool.poetry.dependencies.sphinx]
version = "^6.1.3"
optional = true

[tool.poetry.dependencies.sphinx-toolbox]
version = "^3.4.0"
optional = true

[tool.poetry.dependencies.sphinx-paramlinks]
version = "^0.5.4"
optional = true

[tool.poetry.dependencies.sphinx-rtd-theme]
version = "^1.2.0"
optional = true

[tool.poetry.extras]
docs = ["sphinx", "sphinx_rtd_theme", "sphinx-toolbox", "sphinx-paramlinks"]

[tool.poetry.group.dev.dependencies]
towncrier = "^22.12.0"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hwpwn = "hwpwn.hwpwn:app"

[tool.towncrier]
title_format = "hwpwn {version} ({project_date})"
directory = "changelog"
package = "hwpwn"
package_dir = "hwpwn"
filename = "CHANGELOG.md"
underlines = ["=", "-"]
issue_format = "{issue} ({pr})"
